[package]
name = "arcadebuttons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.3.3", features = ["websocket"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
rppal = "0.14.1"
