[package]
name = "arcadebuttons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.3.3", features = ["websocket"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
rand = "0.8.5"

[target.'cfg(linux)'.dependencies]
tokio-gpiod = "0.2.2"
